<resources>
  <string name="app_name">MimeMagicExample</string>
  <string name="choose_file">Choose File</string>
  <string name="is_archive">is Archive</string>
  <string name="is_audio">is Audio</string>
  <string name="is_document">is Document</string>
  <string name="is_font">is Font</string>
  <string name="is_image">is Image</string>
  <string name="is_text">is Text</string>
  <string name="is_video">is Video</string>
</resources>